# git-workout

./: .coveragerc  .gitattributes  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  TODO.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
src/workout/: __init__.py  _version.py
tests/: conftest.py  test_workout.py
