[metadata]
# ensure LICENSE is included in wheel metadata
license_file = LICENSE


[tool:pytest]
minversion = 3.0
strict = true
addopts = -ra
testpaths = tests
filterwarnings =
    once::Warning
    ignore:::pympler[.*]


[isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py
use_parentheses=true

known_first_party=attr
known_third_party=hypothesis,pytest,setuptools,six,zope


[versioneer]
VCS = git
style = pep440
versionfile_source = src/workout/_version.py
versionfile_build = workout/_version.py
tag_prefix = v
parentdir_prefix = git-workout-
